fix: [CDS-78899]: Fixed Execution stage name overlapping when no spaces are there (#17771)

--- a/src/modules/70-pipeline/pages/execution-list/ExecutionListTable/ExecutionListTable.module.scss
+++ b/src/modules/70-pipeline/pages/execution-list/ExecutionListTable/ExecutionListTable.module.scss
@@ -228,6 +228,7 @@
 
 .stageLink {
   font-size: var(--font-size-small);
+  word-break: break-word;
 }
 
 .childPipelineExecutionInfo {
